fixed image output on mobile

--- a/client/src/styles/comp-image-output.scss
+++ b/client/src/styles/comp-image-output.scss
@@ -1,10 +1,9 @@
 @import "mixins/mixins.scss";
 .image-output-section{
-
   margin-bottom:50px;
 
   .image-target{
-    height:400px;
+    height:300px;
     min-width:100%;
     overflow: hidden;
     display: flex;
@@ -15,7 +14,7 @@
 
     img{
       width:auto;
-      height: 100%;
+      height: 300px;
       max-width: 100%;
       max-height: 100%;
       object-fit:contain;
@@ -33,9 +32,9 @@
     }
   }
 
-  
   .palette-section{
     height:10px;
+    width:300px;
     max-width:400px;
     display: flex;
     border-radius: 6px;
@@ -52,6 +51,7 @@
 
   .gradient-section{
     height:10px;
+    width:300px;
     max-width:400px;
     display: flex;
     border-radius: 6px;
@@ -62,7 +62,6 @@
     .gradient{
       width:100%;
       height:100%;
-
     }
   }
 }
@@ -70,20 +69,28 @@
 
 @include media-md{
   .image-output-section{
-
     .image-target{
       height:400px;
       min-width:400px;
-    }
-  
-  }
 
+      img{
+        height:100%;
+      }
+
+    }
+    
+    .palette-section{
+      width:400px;
+    }
+
+    .gradient-section{
+      width:400px;
+    }
+  }
 }
 
 @include media-xl{
-
   .image-output-section{
-
     margin-bottom: 0;
     margin-left:100px;
 
@@ -95,14 +102,10 @@
       justify-content: center;
       align-items: center;
       
-      
       img{
         margin:0;
         margin-left:auto;
       }
-
     }
-
   }
-
 }
